# MangoRendering

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  GpuBuffer.cpp  GpuBuffer.h  GpuLights.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  PointLight.cpp  RenderApi.cpp  RenderApi.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  VertexArray.h  Window.cpp  Window.h  imgui.ini  main.cpp
Assets/Models/: character.glb  teddy.glb
Assets/Shaders/: depth_only.frag  depth_only.vert  equirect_to_cubemap.frag  equirect_to_cubemap.vert  grid.frag  grid.vert  light_cull.comp  lighting.glsl  point_shadow_depth.frag  point_shadow_depth.geom  point_shadow_depth.vert  portal_mask.frag  portal_mask.vert  shadow_depth.frag  shadow_depth.vert  skybox.frag  skybox.vert  test.frag  test.vert
EngineAssets/: imgui.ini
EngineAssets/Shaders/: depth_only.vert  light_cull.comp  lighting.glsl  point_shadow_depth.vert  shadow_depth.vert  skinning.comp  skinning_hierarchy.comp  test.frag  test.vert  xegtao_denoise.comp  xegtao_main.comp  xegtao_prefilter.comp
Include/: LuaIncludes.hpp
Include/Glad/: glad.c  glad.h
Root/: hello.lua  player.lua  portals.mscn
Root/Scenes/: CoolSceneBro.mscn
Shaders/: cluster_build.comp  debug_clusters.vert  light_cull.comp  test.frag  test.vert
Src/: main.cpp
Src/Buffers/: Framebuffer.cpp  Framebuffer.h  GpuBuffer.cpp  UniformBuffer.cpp  UniformBuffer.h
Src/Core/: Core.cpp  Core.h  Editor.cpp  Editor.h  Input.cpp  Input.h  NodeRegistry.h  PackedScene.cpp  PackedScene.h  PhysicsWorld.cpp  PhysicsWorld.h  PropertyHolder.cpp  PropertyHolder.h  PropertyRegistry.h  RenderApi.cpp  RenderApi.h  ResourceManager.cpp  ResourceManager.h  ScriptManager.cpp  ScriptManager.h  Window.cpp  Window.h
Src/Core/Editor/: Editor.cpp  Editor.h  EditorCameraController.h  EditorStyle.h  InspectorPanel.cpp  InspectorPanel.h  SceneTreePanel.cpp  SceneTreePanel.h
Src/Core/Editor/UI/: ContentBrowserWindow.cpp  ContentBrowserWindow.h  InspectorPanel.cpp  InspectorPanel.h  SceneTreePanel.cpp  SceneTreePanel.h  ViewportWindow.cpp  ViewportWindow.h
Src/Lights/: PointLight.h
Src/Nodes/: AnimationControllerNode3d.cpp  AnimationControllerNode3d.h  CameraNode3d.cpp  CameraNode3d.h  CollisionShape3d.cpp  CollisionShape3d.h  MeshNode3d.cpp  MeshNode3d.h  Node3d.cpp  Node3d.h  PortalNode3d.cpp  PortalNode3d.h  RenderableNode3d.cpp  RenderableNode3d.h  RigidBody3d.cpp  RigidBody3d.h  SkyboxNode3d.cpp  SkyboxNode3d.h
Src/Nodes/Lights/: DirectionalLightNode3d.cpp  DirectionalLightNode3d.h  GpuLights.h  LightNode3d.cpp  LightNode3d.h  PointLight.cpp  PointLight.h  PointLightNode3d.cpp  PointLightNode3d.h  SpotLight.cpp  SpotLight.h  SpotLightNode3d.cpp  SpotLightNode3d.h
Src/Renderer/: CascadedShadowMap.cpp  CascadedShadowMap.h  GltfLoader.cpp  GltfLoader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PointLightShadowMap.cpp  PointLightShadowMap.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Src/Renderer/Animation/: Animator.cpp  Animator.h  Skeleton.cpp  Skeleton.h
Src/Renderer/Buffers/: Framebuffer.cpp  Framebuffer.h  GpuBuffer.cpp  GpuBuffer.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  UniformBuffer.cpp  UniformBuffer.h
Src/Renderer/Materials/: EquirectToCubemap.cpp  EquirectToCubemap.h  Material.cpp  Material.h  Texture.cpp  Texture.h
Src/Renderer/Meshes/: CubeGeometry.h  GltfLoader.cpp  GltfLoader.h  Mesh.cpp  Mesh.h  PrimitiveMesh.h
Src/Renderer/Pipeline/: ClusterSystem.cpp  ClusterSystem.h  IBLPrecomputer.cpp  IBLPrecomputer.h  LightManager.cpp  LightManager.h  ShadowRenderer.cpp  ShadowRenderer.h
Src/Renderer/Shadows/: CascadedShadowMap.cpp  CascadedShadowMap.h  PointLightShadowMap.cpp
Src/Scene/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  Object.cpp  Object.h  Transform.h
